Fixed column widths

--- a/style.css
+++ b/style.css
@@ -42,6 +42,12 @@ header {
 
 table {
   text-align: center;
+  table-layout: fixed;
+  width: 100px;
+}
+
+td {
+  overflow: hidden; 
 }
 
 .dayOfWeek {
